# rich-statistics

./: .distignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  build.sh  composer.json  phpunit.integration.xml  phpunit.xml.dist  readme.txt  rich-statistics.php  uninstall.php
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  deploy-wporg.yml  tests.yml
.phpunit.cache/: test-results
assets/css/: admin.css  heatmap.css
assets/js/: admin-charts.js  heatmap-overlay.js  rsa-profile-otp.js  tracker.js
cli/: class-cli.php
docs/: CNAME  index.html  style.css
docs/app/: app.css  app.js  config.js  index.html  manifest.json  sw-init.js  sw.js  versions.json
docs/wiki/: app-server-setup.html  bot-detection.html  cli-reference.html  code-map.html  configuration.html  index.html  installation.html  premium-features.html  privacy-compliance.html  rest-api.html  utm-tracking.html  wiki.css
includes/: class-admin.php  class-analytics.php  class-bot-detection.php  class-click-tracking.php  class-db.php  class-email.php  class-freemius-stub.php  class-heatmap.php  class-pwa-download.php  class-rest-api.php  class-tracker.php  class-woocommerce.php
languages/: rich-statistics.pot
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
templates/admin/: audience.php  behavior.php  campaigns.php  click-map.php  data-settings.php  email-settings.php  export.php  heatmap.php  (+8 more)
tests/: bootstrap.php
webapp/: app.css  app.js  index.html  manifest.json  sw.js
(+36 files in other folders)
